# trust-platform

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  rustfmt.toml
crates/trust-debug/: Cargo.toml
crates/trust-debug/src/: lib.rs  main.rs  protocol.rs  runtime.rs  session.rs
crates/trust-debug/src/adapter/: control_bridge.rs  core.rs  io.rs  launch.rs  mod.rs  paused.rs  protocol_io.rs  remote.rs  stop.rs  stop_remote.rs  tests.rs  util.rs
crates/trust-hir/: Cargo.toml
crates/trust-hir/src/: diagnostics.rs  ident.rs  lib.rs  project.rs  symbols.rs  types.rs
crates/trust-hir/src/db/: mod.rs  queries.rs  symbol_import.rs
crates/trust-hir/src/symbols/: builtins.rs  defs.rs  helpers.rs  table.rs
crates/trust-hir/src/type_check/: calls.rs  compatibility.rs  const_eval.rs  expr.rs  helpers.rs  literals.rs  mod.rs  ops.rs  standard.rs  stmt.rs  symbol_resolve.rs  validation.rs
crates/trust-hir/src/types/: builtins.rs  compat.rs  defs.rs  registry.rs
crates/trust-hir/tests/: common.rs  generic_types.rs  iec_table_coverage.rs  namespaces.rs  semantic_interfaces.rs  semantic_name_resolution.rs  semantic_parameters.rs  semantic_scope.rs  semantic_standard_functions.rs  semantic_type_checking.rs  semantic_type_definitions.rs  var_sections.rs
crates/trust-hir/tests/snapshots/: iec_table_coverage__iec_table_coverage_report.snap
crates/trust-ide/: Cargo.toml
crates/trust-ide/src/: call_hierarchy.rs  completion.rs  diagnostics.rs  goto_def.rs  hover.rs  implementation.rs  inlay_hints.rs  inline_values.rs  lib.rs  linked_editing.rs  refactor.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  stdlib_docs.rs  type_hierarchy.rs  util.rs  var_decl.rs
crates/trust-ide/tests/: ide_features.rs  stdlib_coverage.rs
crates/trust-lsp/: Cargo.toml
crates/trust-lsp/src/: config.rs  external_diagnostics.rs  index_cache.rs  library_docs.rs  library_graph.rs  main.rs  perf.rs  state.rs  telemetry.rs  test_support.rs
crates/trust-lsp/src/handlers/: commands.rs  diagnostics.rs  features.rs  formatting.rs  lsp_utils.rs  mod.rs  progress.rs  refresh.rs  runtime_values.rs  sync.rs  tests.rs  workspace.rs
crates/trust-lsp/src/state/: mod.rs  path.rs
crates/trust-lsp/tests/: spec_drift.rs
crates/trust-runtime/: Cargo.toml
crates/trust-runtime/src/: bundle.rs  bundle_builder.rs  bundle_template.rs  config.rs  control.rs  datetime.rs  discovery.rs  error.rs  hmi.rs  instance.rs  io.rs  lib.rs  memory.rs  mesh.rs  metrics.rs  numeric.rs  plcopen.rs  retain.rs  scheduler.rs  settings.rs  setup.rs  task.rs  ui.rs  watchdog.rs  web.rs
crates/trust-runtime/src/bytecode/: decode.rs  encode.rs  format.rs  metadata.rs  mod.rs  reader.rs  util.rs  validate.rs
crates/trust-runtime/src/control/: transport.rs
crates/trust-runtime/src/debug/: breakpoints.rs  control.rs  dap.rs  hook.rs  mod.rs  resolve.rs  trace.rs  types.rs
crates/trust-runtime/src/eval/: mod.rs  ops.rs  stmt.rs
crates/trust-runtime/src/harness/: api.rs  build.rs  coerce.rs  config.rs  harness.rs  io.rs  mod.rs  parse.rs  types.rs  util.rs
crates/trust-runtime/src/io/: ethercat.rs  gpio.rs  loopback.rs  modbus.rs  registry.rs
crates/trust-runtime/src/runtime/: bytecode.rs  core.rs  cycle.rs  faults.rs  io_subsystem.rs  mesh.rs  metadata.rs  metrics_subsystem.rs  mod.rs  restart.rs  retain_store.rs  types.rs  watchdog_subsystem.rs
crates/trust-runtime/src/stdlib/: assertions.rs  bit.rs  comparison.rs  helpers.rs  mod.rs  numeric.rs  selection.rs  string.rs  time.rs  validate.rs
crates/trust-runtime/src/value/: datetime.rs  defaults.rs  mod.rs  partial_access.rs  reference.rs  size.rs  types.rs
crates/trust-runtime/src/web/: deploy.rs  ide.rs  pairing.rs
crates/trust-runtime/tests/: api_smoke.rs  build.rs  bytecode_container.rs  bytecode_encoder.rs  bytecode_helpers.rs  bytecode_metadata.rs  bytecode_roundtrip.rs  bytecode_sections.rs  bytecode_validation.rs  ci_cicd_contract.rs  communication_examples_cli.rs  complete_program.rs  datetime_profile.rs  datetime_range.rs  datetime_types.rs  debug_control.rs  debug_stepping.rs  determinism.rs  e2e_basic.rs  e2e_comments.rs  e2e_configuration.rs  e2e_full_grammar.rs  e2e_multifile.rs  e2e_scheduler.rs  e2e_semicolons.rs  errors.rs  errors_policy.rs  ethercat_driver.rs  expr_access.rs  expr_bool.rs  expr_calls.rs  expr_coercion.rs  expr_full.rs  expr_literals.rs  expr_ops.rs  expr_time_ops.rs  fb_bistable.rs  fb_counters.rs  fb_counters_full.rs  fb_edges.rs  (+84 more)
crates/trust-runtime/tests/common/: mod.rs
crates/trust-runtime/web/ide-frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.monaco.config.ts
crates/trust-syntax/: Cargo.toml
crates/trust-syntax/src/: lib.rs  token_kinds.rs
crates/trust-syntax/src/lexer/: mod.rs  tokens.rs
crates/trust-syntax/src/parser/: event.rs  mod.rs  parser.rs  sink.rs  source.rs
crates/trust-syntax/src/syntax/: mod.rs
crates/trust-syntax/tests/: common.rs  lexer_common.rs  lexer_literals.rs  lexer_pragmas.rs  parser_complex.rs  parser_error_recovery.rs  parser_expressions.rs  parser_literals.rs  parser_pous.rs  parser_project_examples.rs  parser_statements.rs  parser_types.rs  parser_variables.rs
crates/trust-syntax/tests/snapshots/: parser_complex__complete_function_block.snap  parser_error_recovery__invalid_signed_based_typed_literal.snap  parser_error_recovery__missing_end_if.snap  parser_error_recovery__missing_end_program.snap  parser_error_recovery__missing_semicolon.snap  parser_error_recovery__missing_then.snap  parser_error_recovery__unexpected_token.snap  parser_expressions__adr_sizeof.snap  parser_expressions__arithmetic_operators.snap  parser_expressions__array_indexing.snap  parser_expressions__comparison_operators.snap  (+54 more)
crates/trust-wasm-analysis/: Cargo.toml  LICENSE-MIT
crates/trust-wasm-analysis/src/: lib.rs
crates/trust-wasm-analysis/tests/: mp010_parity.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hir_semantic.rs  syntax_parse.rs
(+551 files in other folders)
