[package]
name = "trust-syntax"
description = "Lexer, parser, and concrete syntax tree for IEC 61131-3 Structured Text"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
logos.workspace = true
rowan.workspace = true
text-size.workspace = true
smol_str.workspace = true
rustc-hash.workspace = true
drop_bomb.workspace = true
thiserror.workspace = true

[dev-dependencies]
expect-test.workspace = true
insta.workspace = true
